<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="username_label">Username:</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirmation_label">Confirm Password:</string>
    <string name="confirmation_hint">Please confirm your password</string>
    <string name="submit_button">Submit:</string>
    <string name="action_settings">Settings</string>

    <string name="dummy">Settings</string>

</resources>
