<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_label"
                android:text="@string/username_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/username_input"
                android:hint="@string/username_input_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_label"
                android:text="@string/password_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/password_hint"
                android:hint="@string/password_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirmation_label"
                android:text="@string/confirmation_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/confirmation_hint"
                android:hint="@string/confirmation_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fields"
        android:layout_below="@id/fields"
        android:text="@string/submit_button" />


</RelativeLayout>
